--- a/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
+++ b/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
@@ -10,12 +10,15 @@
     - name: launch an instance
       openstack.cloud.server:
         state: present
-        cloud: CH-819381
-        name: teamhgh_ansible_chameleon_01
+        cloud: openstack
+        name: teamhgh_ansible_chameleon_007
         availability_zone: nova
         image: CC-Ubuntu20.04
-        timeout: 200
         flavor: m1.small
+        network: CH-819381-net
+        key_name: ChameleonHGH01
+        security_groups: 241156b1-e189-4233-aa25-d6071b67adae
+        timeout: 200
         floating_ips:
           - 10.212.96.69
 ...
