--- a/MS_02/ansible_playbooks/playbook_initialize_couchdb.yml
+++ b/MS_02/ansible_playbooks/playbook_initialize_couchdb.yml
@@ -21,19 +21,20 @@
           # - name: Clone Producer/Consumer Code
           # shell: "git clone https://github.com/lukegarrett/cloudHGH.git"
 
-    - name: Start Zookeeper Service
-      shell: "bin/zookeeper-server-start.sh  config/zookeeper.properties"
-      async: 86400 #Run for 24hours
-      poll: 0
+    - name: Enable CouchDB Repository 01
+      shell: "curl -L https://couchdb.apache.org/repo/bintray-pubkey.asc | sudo apt-key add "
 
-    - name: Start Kafka Service
-      shell: "bin/kafka-server-start.sh  config/server.properties"
-      async: 86400
-      poll: 0
+    - name: Enable CouchDB Repository 02
+      shell: "echo "deb https://apache.bintray.com/couchdb-deb focal main" | sudo tee -a /etc/apt/sources.list"
 
-    - name: Create Kafka Topic
-      shell: "bin/kafka-topics.sh --create --topic hghdata --bootstrap-server localhost:9092"
-      async: 5
-      poll: 0
+    - name: Enable CouchDB Repository 03
+      shell: "curl https://couchdb.apache.org/repo/keys.asc | gpg --dearmor | sudo tee /usr/share/keyrings/couchdb-archive-keyring.gpg >/dev/null 2>&1
+			source /etc/os-release"
+
+    - name: Apt-Update
+      shell: "sudo apt update"
+
+    - name: Install CouchDB
+      shell: "sudo apt install couchdb"
 
 ...
