modified couchdb download url

--- a/MS_02/ansible_playbooks/playbook_install_couchdb.yml
+++ b/MS_02/ansible_playbooks/playbook_install_couchdb.yml
@@ -22,7 +22,7 @@
         install_recommends: no
     
     - name: Download kafka
-      shell: "curl \"https://dlcdn.apache.org/couchdb/source/3.2.0/apache-couchdb-3.2.0.tar.gz\" -o couchdb.tgz"
+      shell: "curl \"https://github.com/lukegarrett/cloudHGH/raw/master/apache-couchdb-3.2.0.tar.gz\" -o couchdb.tgz"
 
     - name: Extracting Kafka
       shell: "tar -xvzf couchdb.tgz --strip 1"
