modified apt key

--- a/MS_02/ansible_playbooks/playbook_install_couchdb.yml
+++ b/MS_02/ansible_playbooks/playbook_install_couchdb.yml
@@ -14,7 +14,13 @@
     become: yes
     #when: ansible_facts['hostname'] == "gokhale-vm3"
 
-  # need to add repo to apt here TODO
+  - name: Add couchdb repository to apt
+    apt_repository:
+      repo: "deb [signed-by=/usr/share/keyrings/couchdb-repo-keyring.gpg] https://apache.jfrog.io/artifactory/couchdb-deb focal main"
+      state: present
+      update_cache: no  # we do not update cache as the signing key is not added yet.
+    become: yes
+    #when: ansible_facts['hostname'] == "gokhale-vm3"
 
   # This will install couchdb without any admin, etc.
   - name: Install CouchDB
