--- a/MS_02/ansible_playbooks/playbook_install_couchdb.yml
+++ b/MS_02/ansible_playbooks/playbook_install_couchdb.yml
@@ -12,15 +12,15 @@
       state: present   # this is default
       keyring: /usr/share/keyrings/couchdb-repo-keyring.gpg
     become: yes
-    #when: ansible_facts['hostname'] == "gokhale-vm3"
 
   - name: Add couchdb repository to apt
+
     apt_repository:
       repo: "deb [signed-by=/usr/share/keyrings/couchdb-repo-keyring.gpg] https://apache.jfrog.io/artifactory/couchdb-deb focal main"
       state: present
+      filename: couchdb.list
       update_cache: no  # we do not update cache as the signing key is not added yet.
     become: yes
-    #when: ansible_facts['hostname'] == "gokhale-vm3"
 
   # This will install couchdb without any admin, etc.
   - name: Install CouchDB
@@ -31,5 +31,4 @@
     loop:
       - couchdb
     become: yes
-    #when: ansible_facts['hostname'] == "gokhale-vm3"
     
