--- a/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
+++ b/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
@@ -6,19 +6,38 @@
 #
 - name: launch a compute instance
   hosts: MyLocalVMs
-  tasks:       
-    - name: launch an instance
+  tasks:    
+
+    - name: launch instance 01
       openstack.cloud.server:
         state: present
         cloud: openstack
-        name: teamhgh_ansible_chameleon_007
+        name: teamhgh_ansible_chameleon_01
         image: CC-Ubuntu20.04
         flavor: m1.small
         network: CH-819381-net
         key_name: ChameleonHGH01
-        security_groups: 241156b1-e189-4233-aa25-d6071b67adae
+        security_groups:
+                - 241156b1-e189-4233-aa25-d6071b67adae
+                - 06d3d681-8e74-43c7-bbe7-df96259b57ae
         timeout: 200
         floating_ips:
-          - 10.212.96.69
+          - 129.114.27.209
+
+    - name: launch instance 02
+      openstack.cloud.server:
+        state: present
+        cloud: openstack
+        name: teamhgh_ansible_chameleon_02
+        image: CC-Ubuntu20.04
+        flavor: m1.small
+        network: CH-819381-net
+        key_name: ChameleonHGH01
+        security_groups:
+                - 241156b1-e189-4233-aa25-d6071b67adae
+                - 06d3d681-8e74-43c7-bbe7-df96259b57ae
+        timeout: 200
+        floating_ips:
+          - 129.114.25.217
 ...
 
