--- a/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
+++ b/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
@@ -4,10 +4,8 @@
 # EECS 4287/5287: Principles of Cloud Computing
 # Author: Camren Hall, Luke Garrett, Safet Hoxha
 #
-- name: launch a compute instance
-  hosts: MyLocalVMs
+- hosts: MyLocalVMs
   tasks:    
-
     - name: launch instance 01
       openstack.cloud.server:
         state: present
@@ -23,7 +21,6 @@
         timeout: 200
         floating_ips:
           - 129.114.27.209
-
     - name: launch instance 02
       openstack.cloud.server:
         state: present
