--- a/MS_02/ansible_playbooks/DEMO_playbook_chameleon.yml
+++ b/MS_02/ansible_playbooks/DEMO_playbook_chameleon.yml
@@ -22,6 +22,21 @@
                 - 06d3d681-8e74-43c7-bbe7-df96259b57ae
         timeout: 500
         floating_ips:
-          - 129.114.25.114
+          - 129.114.27.209
+    - name: launch an instance 02
+      openstack.cloud.server:
+        state: present
+        cloud: openstack
+        name: teamhgh_ansible_chameleon_02
+        image: CC-Ubuntu20.04
+        network: CH-819381-net
+        flavor: m1.small
+        key_name: ChameleonHGH01
+        security_groups:
+                - 241156b1-e189-4233-aa25-d6071b67adae
+                - 06d3d681-8e74-43c7-bbe7-df96259b57ae
+        timeout: 500
+        floating_ips:
+          - 129.114.25.217
 ...
 
