modified demo also

--- a/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
+++ b/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
@@ -7,7 +7,7 @@
 - name: launch a compute instance
   hosts: MyLocalVMs
   tasks:       
-    - name: launch instance 01
+    - name: launch an instance
       openstack.cloud.server:
         state: present
         cloud: openstack
