--- a/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
+++ b/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
@@ -4,21 +4,36 @@
 # EECS 4287/5287: Principles of Cloud Computing
 # Author: Camren Hall, Luke Garrett, Safet Hoxha
 #
-- name: launch a compute instance
+- name: Launching Openstack Compute Instances
   hosts: MyLocalVMs
   tasks:       
-    - name: launch an instance
+    - name: Launch Instance 01
       openstack.cloud.server:
         state: present
         cloud: openstack
         name: teamhgh_ansible_chameleon_007
         image: CC-Ubuntu20.04
-        flavor: m1.small
+        flavor: m1.medium
         network: CH-819381-net
         key_name: ChameleonHGH01
-        security_groups: 241156b1-e189-4233-aa25-d6071b67adae
+        security_groups:
+                - 241156b1-e189-4233-aa25-d6071b67adae
         timeout: 200
         floating_ips:
-          - 129.114.25.217
+          - 129.114.27.209
+    - name: Launch Instance 02
+      openstack.cloud.server:
+        state: present
+        cloud: openstack
+        name: teamhgh_ansible_chameleon_008
+        image: CC-Ubuntu20.04
+        flavor: m1.medium
+        network: CH-819381-net
+        key_name: ChameleonHGH01
+        security_groups:
+                - 241156b1-e189-4233-aa25-d6071b67adae
+        timeout: 500
+        floating_ips:
+          - 129.114.25.167
 ...
 
