--- a/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
+++ b/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
@@ -19,7 +19,8 @@
         security_groups:
                 - 241156b1-e189-4233-aa25-d6071b67adae
         timeout: 200
-        auto_ip: yes
+        floating_ips:
+          - 129.114.24.229
     - name: Launch Instance 02
       openstack.cloud.server:
         state: present
@@ -32,16 +33,7 @@
         security_groups:
                 - 241156b1-e189-4233-aa25-d6071b67adae
         timeout: 500
-        auto_ip: yes
-    - name: Gather Facts
-      openstack.cloud.server_info:
-        cloud: openstack
-        server: teamhgh*
-        filters:
-          vm_state: active
-      register: result
-      debug:
-        msg: "{{ result.openstack_servers }}"
-        
+        floating_ips:
+          - 129.114.27.39
 ...
 
