modified security groups

--- a/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
+++ b/MS_02/ansible_playbooks/playbook_instantiate_openstack_vm.yml
@@ -16,8 +16,7 @@
         flavor: m1.medium
         network: CH-819381-net
         key_name: ChameleonHGH01
-        security_groups:
-                - 241156b1-e189-4233-aa25-d6071b67adae
+        security_groups: 241156b1-e189-4233-aa25-d6071b67adae
         timeout: 200
         floating_ips:
           - 129.114.24.229
@@ -30,8 +29,7 @@
         flavor: m1.medium
         network: CH-819381-net
         key_name: ChameleonHGH01
-        security_groups:
-                - 241156b1-e189-4233-aa25-d6071b67adae
+        security_groups: 241156b1-e189-4233-aa25-d6071b67adae
         timeout: 500
         floating_ips:
           - 129.114.27.39
