--- a/MS_02/ansible_playbooks/playbook_master.yml
+++ b/MS_02/ansible_playbooks/playbook_master.yml
@@ -1,26 +1,63 @@
 ---
 #
 # EECS 4287/5287: Principles of Cloud Computing
-# Author: Camren Hall, Luke Garrett, Safet Hoxha
+# Author: Aniruddha Gokhale
+# Created: Fall 2017
+# Modified: Fall 2020
 #
-- name: "Play 1: Instantiate Chameleon VM"
-  hosts: MyLocalVMs          # specified in the MyInventory file
-  remote_user:  vagrant
-  gather_facts: yes          # We ask Ansible to collect all facts
-  tasks:    # the task to be performed (here I am showing the effect of include_)
-  - include_tasks: DEMO_playbook_chameleon.yml
+# This playbook is our demo master file
+# The goal is to show how to have a single master file which then
+# includes multiple plays according to some well-designed choreography
+#
+# One way to reuse existing playbooks is to simply import them as
+# import_playbook: <playbook>
+# I show this approach for actions I do on the local VM where I let the
+# playbook define the hosts: and other params
+# However for other plays, I show a different approach using import_tasks or
+# include_tasks statements.
+#
+# The import_* statements are statically included and parsed while include_*
+# are dynamically included as the playbook executes. Thus, errors can be found
+# only when the task gets included at runtime. However, there are advantages
+# of including vs importing because a runtime value of variables may define
+# runtime behavior as opposed to a static inclusion.
+#
+# See https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse.html for
+# detailed explanation
+#
 
-- name: "Play 3: Master file performing several actions on cloud VMs"
+#####################################################
+### Play 1: Get facts from all our VMs
+#
+# Here I show the use of include_tasks from child playbooks
+#####################################################
+- name: "Play 1: Perform VM initialization"
+  hosts: MyLocalVMs          # specified in the MyInventory file
+  remote_user:  vagrant      # note that the user is ubuntu for 
+                             # vagrant-created VM else use the
+                             # appropriate user name
+
+  gather_facts: yes          # We ask Ansible to collect all facts
+  become_user: no            # No need for sudo as we are not installing anything
+
+  tasks:    # the task to be performed (here I am showing the effect of include_)
+  - include_tasks: playbook_instantiate_openstack_vm.yml
+
+
+- name: "Play 2: Master file performing several actions on cloud VMs"
   hosts: MyChameleonVMs       # specified in the MyInventory file
   remote_user:  cc       # change this user to what it is for the cloud
   become: yes               # run as sudo
   collections:               # import the plugin
   - openstack.cloud
 
+  ### All the tasks related to the cloud VMs ###
+  # note that since we already defined the hosts and remote_user parameters
+  # above, we simply import the tasks (could have included) and these
+  # tasks are in the playbooks defined in my tasks/ directory
   tasks:
   - include_tasks: playbook_packages_install.yml
-  - include_tasks: playbook_modify_listeners.yml
   - include_tasks: playbook_initialize_services.yml
-
+  - include_tasks: playbook_install_couchdb.yml
 ...
 
