--- a/Project3/Kubernetes Cluster/.ansible.cfg
+++ b/Project3/Kubernetes Cluster/.ansible.cfg
@@ -20,6 +20,7 @@
 #poll_interval   = 0.001
 #ask_pass        = False
 #transport       = smart
+ansible_python_interpreter=/usr/bin/python3
 
 # Plays will gather facts by default, which contain information about
 # the remote system.
