--- a/Project3/Kubernetes Cluster/dockerfile
+++ b/Project3/Kubernetes Cluster/dockerfile
@@ -1,24 +1,31 @@
-# Author: Aniruddha Gokhale
-# Vanderbilt University
-# Created May 2017,
-# Modified Nov 2017
-# Modified Oct 2018
-# Modified Oct 2019 to use Python3
-#
-# For Cloud Computing class
-#
-# First, use the latest ubuntu image, which points to the
-# latest LTS image, currently 18.04
-FROM ubuntu:bionic
-#
-# Now install the needed python packages
-RUN apt-get -y update && apt-get install -y net-tools python3 gcc
-RUN apt-get install -y python3-dev python3-pip
-RUN python3 -m pip install --upgrade pip
-RUN pip3 install --upgrade numpy
-#
-# Next, copy our matrix inverse code into the container
-COPY *.py /
-#
-# Run a command shell (for Swarm, we comment this out)
-CMD /bin/bash
+# Kafka and Zookeeper
+FROM alpine:3.9.2
+
+RUN apk add --update openjdk8-jre supervisor bash gcompat
+
+ENV ZOOKEEPER_VERSION 3.4.13
+ENV ZOOKEEPER_HOME /opt/zookeeper-"$ZOOKEEPER_VERSION"
+
+RUN wget -q http://archive.apache.org/dist/zookeeper/zookeeper-"$ZOOKEEPER_VERSION"/zookeeper-"$ZOOKEEPER_VERSION".tar.gz -O /tmp/zookeeper-"$ZOOKEEPER_VERSION".tgz
+RUN ls -l /tmp/zookeeper-"$ZOOKEEPER_VERSION".tgz
+RUN tar xfz /tmp/zookeeper-"$ZOOKEEPER_VERSION".tgz -C /opt && rm /tmp/zookeeper-"$ZOOKEEPER_VERSION".tgz
+ADD assets/conf/zoo.cfg $ZOOKEEPER_HOME/conf
+
+ENV SCALA_VERSION 2.13
+ENV KAFKA_VERSION 2.6.0
+ENV KAFKA_HOME /opt/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION"
+ENV KAFKA_DOWNLOAD_URL https://archive.apache.org/dist/kafka/"$KAFKA_VERSION"/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz
+
+RUN wget -q $KAFKA_DOWNLOAD_URL -O /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz
+RUN tar xfz /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz -C /opt && rm /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz
+
+ADD assets/scripts/start-kafka.sh /usr/bin/start-kafka.sh
+ADD assets/scripts/start-zookeeper.sh /usr/bin/start-zookeeper.sh
+
+# Supervisor config
+ADD assets/supervisor/kafka.ini assets/supervisor/zookeeper.ini /etc/supervisor.d/
+
+# 2181 is zookeeper, 9092 is kafka
+EXPOSE 2181 9092
+
+CMD ["supervisord", "-n"]
