--- a/Project3/Kubernetes Cluster/dockerfile
+++ b/Project3/Kubernetes Cluster/dockerfile
@@ -1,31 +1,14 @@
+FROM ubuntu:bionic
 # Kafka and Zookeeper
-FROM alpine:3.9.2
+ENV KAFKA_DOWNLOAD_URL https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz
 
-RUN apk add --update openjdk8-jre supervisor bash gcompat
-
-ENV ZOOKEEPER_VERSION 3.4.13
-ENV ZOOKEEPER_HOME /opt/zookeeper-"$ZOOKEEPER_VERSION"
-
-RUN wget -q http://archive.apache.org/dist/zookeeper/zookeeper-"$ZOOKEEPER_VERSION"/zookeeper-"$ZOOKEEPER_VERSION".tar.gz -O /tmp/zookeeper-"$ZOOKEEPER_VERSION".tgz
-RUN ls -l /tmp/zookeeper-"$ZOOKEEPER_VERSION".tgz
-RUN tar xfz /tmp/zookeeper-"$ZOOKEEPER_VERSION".tgz -C /opt && rm /tmp/zookeeper-"$ZOOKEEPER_VERSION".tgz
-ADD assets/conf/zoo.cfg $ZOOKEEPER_HOME/conf
-
-ENV SCALA_VERSION 2.13
-ENV KAFKA_VERSION 2.6.0
-ENV KAFKA_HOME /opt/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION"
-ENV KAFKA_DOWNLOAD_URL https://archive.apache.org/dist/kafka/"$KAFKA_VERSION"/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz
-
-RUN wget -q $KAFKA_DOWNLOAD_URL -O /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz
-RUN tar xfz /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz -C /opt && rm /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz
-
-ADD assets/scripts/start-kafka.sh /usr/bin/start-kafka.sh
-ADD assets/scripts/start-zookeeper.sh /usr/bin/start-zookeeper.sh
-
-# Supervisor config
-ADD assets/supervisor/kafka.ini assets/supervisor/zookeeper.ini /etc/supervisor.d/
+RUN curl "$KAFKA_DOWNLOAD_URL" -o ./kafka/kafka.tgz
+RUN tar -xvzf kafka/kafka.tgz --strip 1
+RUN bin/zookeeper-server-start.sh  config/zookeeper.properties --override listeners=PLAINTEXT://:9092
+RUN bin/kafka-server-start.sh  config/server.properties
+RUN bin/kafka-topics.sh --create --topic hghdata --bootstrap-server localhost:9092
 
 # 2181 is zookeeper, 9092 is kafka
 EXPOSE 2181 9092
 
-CMD ["supervisord", "-n"]
+CMD echo finished
