--- a/Project3/Kubernetes Cluster/dockerfile
+++ b/Project3/Kubernetes Cluster/dockerfile
@@ -2,6 +2,7 @@ FROM ubuntu:bionic
 # Kafka and Zookeeper
 ENV KAFKA_DOWNLOAD_URL https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz
 
+RUN apt-get update
 RUN curl "$KAFKA_DOWNLOAD_URL" -o ./kafka/kafka.tgz
 RUN tar -xvzf kafka/kafka.tgz --strip 1
 RUN bin/zookeeper-server-start.sh  config/zookeeper.properties --override listeners=PLAINTEXT://:9092
