--- a/Project3/Kubernetes Cluster/dockerfile
+++ b/Project3/Kubernetes Cluster/dockerfile
@@ -4,7 +4,7 @@ ENV KAFKA_DOWNLOAD_URL https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz
 
 RUN apt-get update
 RUN apt-get install curl -y
-RUN curl "$KAFKA_DOWNLOAD_URL" -o ./kafka/kafka.tgz
+RUN curl "https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz" -o ./kafka/kafka.tgz
 RUN tar -xvzf kafka/kafka.tgz --strip 1
 RUN bin/zookeeper-server-start.sh  config/zookeeper.properties --override listeners=PLAINTEXT://:9092
 RUN bin/kafka-server-start.sh  config/server.properties
