--- a/Project3/Kubernetes Cluster/dockerfile
+++ b/Project3/Kubernetes Cluster/dockerfile
@@ -4,7 +4,7 @@ ENV KAFKA_DOWNLOAD_URL https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz
 
 RUN apt-get update
 RUN apt-get install curl -y
-RUN curl "https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz" -o tmp.tgz
+RUN wget -o tmp.tgz "https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz"
 RUN tar -xvzf tmp.tgz
 RUN kafka_2.13-2.8.1.tgz/bin/zookeeper-server-start.sh  kafka_2.13-2.8.1.tgz/config/zookeeper.properties --override listeners=PLAINTEXT://:9092
 RUN kafka_2.13-2.8.1.tgz/bin/kafka-server-start.sh  kafka_2.13-2.8.1.tgz/config/server.properties
