--- a/Project3/Kubernetes Cluster/dockerfile
+++ b/Project3/Kubernetes Cluster/dockerfile
@@ -4,6 +4,7 @@ ENV KAFKA_DOWNLOAD_URL https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz
 
 RUN apt-get update
 RUN apt-get install curl -y
+RUN apt-get install default-jre
 RUN curl -o tmp.tgz "https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz"
 RUN tar -xvzf tmp.tgz
 RUN ./kafka_2.13-2.8.1/bin/zookeeper-server-start.sh  ./kafka_2.13-2.8.1/config/zookeeper.properties --override listeners=PLAINTEXT://:9092
