--- a/Project3/Kubernetes Cluster/container-deployment/Zookeeper/dockerfile
+++ b/Project3/Kubernetes Cluster/container-deployment/Zookeeper/dockerfile
@@ -1,10 +1,10 @@
 FROM ubuntu:bionic
-# Kafka and Zookeeper
-ENV KAFKA_DOWNLOAD_URL https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz
 
-RUN apt-get update
-RUN apt-get install curl -y
-RUN apt-get install default-jre -y
-RUN apt-get install python3 -y
-RUN curl -o tmp.tgz "https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz"
-RUN tar -xvzf tmp.tgz
+RUN apt-get -y update && apt-get install -y net-tools wget dnsutils iputils-ping iputils-tracepath iputils-arping iputils-clockdiff default-jdk python3
+RUN apt-get install -y python3-dev python3-pip
+RUN python3 -m pip install --upgrade pip
+
+RUN wget https://dlcdn.apache.org/kafka/2.8.1/kafka_2.13-2.8.1.tgz
+RUN zcat kafka_2.13-2.8.1.tgz | tar xpof -
+
+CMD ./kafka.2.13-2.8.1.tgz/bin/zookeeper-server-start.sh
