--- a/Project3/Kubernetes Cluster/container-deployment/Zookeeper/zookeeper-deployment.yaml
+++ b/Project3/Kubernetes Cluster/container-deployment/Zookeeper/zookeeper-deployment.yaml
@@ -20,7 +20,7 @@ spec:                     # This is the specification where we can even put the 
     spec:                 # actual specification
       containers:
       - name: zookeeper                   # Used by DNS
-        image: zookeeper-deployment-image    # this is the image name on hub.docker or if you have one locally. We use an older
-                                          # and then show how we can upgrade to newer version
+        image: zookeeper    # this is the image name on hub.docker or if you have one locally. We use an older
+                                   # and then show how we can upgrade to newer version
         ports:                            # Since nginx is a web server, we let it listen on port 80 in the container
         - containerPort: 30005
