--- a/Project3/Kubernetes Cluster/container-deployment/Kafka-Broker-Master/kb-svc.yaml
+++ b/Project3/Kubernetes Cluster/container-deployment/Kafka-Broker-Master/kb-svc.yaml
@@ -1,14 +1,16 @@
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
-  name: kb0-svc  # A name must be given to the deployment in the metadata section  
-selector:
-  app: kb0App     # Basically this is like the search string used to locate the pods
-spec:  
+  name: kb0-svc
+spec:
+  type: NodePort
+  selector:
+    app: kb0App
   ports:
-    - port: 9092
-      targetPort: 9092
-      nodePort: 30000
+  - name: kb0-port
+    protocol: TCP
+    port: 9092
+    targetPort: 9092
+    nodePort: 30000
 ...
-
