--- a/Project3/Kubernetes Cluster/container-deployment/Kafka-Broker-Master/zk-svc.yaml
+++ b/Project3/Kubernetes Cluster/container-deployment/Kafka-Broker-Master/zk-svc.yaml
@@ -1,14 +1,16 @@
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
-  name: zk-svc  # A name must be given to the deployment in the metadata section  
-selector:
-  app: zkApp      # Basically this is like the search string used to locate the pods
-spec:  
+  name: zk-svc
+spec:
+  type: NodePort
+  selector:
+    app: zkApp
   ports:
-    - port: 2181
-      targetPort: 2181
-      nodePort: 30005
+  - name: zk-port
+    protocol: TCP
+    port: 2181
+    targetPort: 2181
+    nodePort: 30005
 ...
-
