added public repo

--- a/Project3/Kubernetes Cluster/container-deployment/Kafka-Broker-Master/zookeeper-deployment.yaml
+++ b/Project3/Kubernetes Cluster/container-deployment/Kafka-Broker-Master/zookeeper-deployment.yaml
@@ -23,9 +23,9 @@ spec:                     # This is the specification where we can even put the 
         kubernetes.io/hostname: kubemaster
       containers:
       - name: zk       # Used by DNS
-        image: kb0-image   # this is the image name on hub.docker or if you have one locally. We use an older
+        image: camrenhall/cloudhgh:kb0-image   # this is the image name on hub.docker or if you have one locally. We use an older
                           # and then show how we can upgrade to newer version
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         ports:            # Since nginx is a web server, we let it listen on port 80 in the container
         - containerPort: 2181
         command: ["kafka_2.13-2.8.1/bin/zookeeper-server-start.sh"]
