added public repo

--- a/Project3/Kubernetes Cluster/tasks/playbook_create_vms.yml
+++ b/Project3/Kubernetes Cluster/tasks/playbook_create_vms.yml
@@ -27,6 +27,7 @@
         key_name: ChameleonHGH01
         security_groups:
                 - ENABLE_KAFKA_COUCHDB
+                - ENABLE_K8S
         timeout: 200
         floating_ips:
           - "{{floating_ip_01}}"
@@ -42,6 +43,7 @@
         key_name: ChameleonHGH01
         security_groups:
                 - ENABLE_KAFKA_COUCHDB
+                - ENABLE_K8S
         timeout: 200
         floating_ips:
           - "{{floating_ip_02}}"
