--- a/Project3/Kubernetes Cluster/container-deployment/Kafka-Consumer-NIU/consumer-deployment.yaml
+++ b/Project3/Kubernetes Cluster/container-deployment/Kafka-Consumer-NIU/consumer-deployment.yaml
@@ -1,21 +1,33 @@
-# This is a declarative approach to describe a Job type Kubernetes
-# workload.   Since this is YAML, the indentation is very important
-apiVersion: batch/v1
-kind: Deployment         # We are testing the Job resource type
+---
+# This is a declarative approach to describe a Kubernetes based
+# deployment of an application.  Since this is YAML, the indentation
+# is very important
+apiVersion: apps/v1
+kind: Job         # We are testing the Deployment resource
 metadata:
-  name: consumer-deployment  # A name must be given to the Job type in the metadata section
+  name: consumer-deploy  # A name must be given to the deployment in the metadata section
 spec:                     # This is the specification where we can even put the number of replicas
+  replicas: 1             # Say we want to run 3 replicas of nginx
+  selector:
+    matchLabels:
+      app: consumerApp          # Basically this is like the search string used to locate the pods
+  minReadySeconds: 5  # if anything crashes before 5 secs, the deployment is not
+                          # considered as ready and available. Default value is 0
   template:               # Specified info needed to run the pod and what runs in the pod
     metadata:
       labels:
-        app: consumer-deployment        # some label to give to this pod (see the matching label above)
+        app: consumerApp        # some label to give to this pod (see the matching label above)
     spec:                 # actual specification
+      hostname: kb1-host
+      nodeSelector:
+        kubernetes.io/hostname: teamhgh-ansible-chameleon-007
       containers:
-      - name: consumer-deployment       # this is going to be used for DNS name
-        image: consumer-deployment-image   # this is the image name I gave when I built from the dockerfile
-        imagePullPolicy: Never  # This forces the node to find the image locally
+      - name: consumer       # Used by DNS
+        image: camrenhall/cloudhgh:kbcon-image   # this is the image name on hub.docker or if you have one locally. We use an older
+                          # and then show how we can upgrade to newer version
+        imagePullPolicy: Always                  
+        ports:            # Since nginx is a web server, we let it listen on port 80 in the container
+        - containerPort: 6001
         command: ["python3"]
-        args: ["consumer.py"]  # arguments to run. I am running this for 1000
-                                                                                                       # iterations so that we have time to do an exec
-                                                                                                       # and open a shell to the running pod
-      restartPolicy: Never  # we ask Kubernetes not to restart
+        args: ["consumer.py"]
+...
