--- a/Project3/Kubernetes Cluster/container-deployment/Kafka-Consumer/consumer-deployment.yaml
+++ b/Project3/Kubernetes Cluster/container-deployment/Kafka-Consumer/consumer-deployment.yaml
@@ -1,30 +1,28 @@
 ---
-# This is a declarative approach to describe a Kubernetes based
-# deployment of an application.  Since this is YAML, the indentation
-# is very important
+# This is a declarative approach to describe a Job type Kubernetes
+# workload.   Since this is YAML, the indentation is very important
 apiVersion: batch/v1
-kind: Job         # We are testing the Deployment resource
+kind: Job         # We are testing the Job resource type
 metadata:
-  name: consumer-deploy  # A name must be given to the deployment in the metadata section
+  name: consumer-job  # A name must be given to the Job type in the metadata section
 spec:                     # This is the specification where we can even put the number of replicas
-  selector:
-    matchLabels:
-      app: consumerApp          # Basically this is like the search string used to locate the pods
   template:               # Specified info needed to run the pod and what runs in the pod
     metadata:
       labels:
-        app: consumerApp        # some label to give to this pod (see the matching label above)
+        app: consumer        # some label to give to this pod (see the matching label above)
     spec:                 # actual specification
-      hostname: kb1-host
-      nodeSelector:
-        kubernetes.io/hostname: teamhgh-ansible-chameleon-007
       containers:
-      - name: consumer       # Used by DNS
-        image: camrenhall/cloudhgh:kbcon-image   # this is the image name on hub.docker or if you have one locally. We use an older
-                          # and then show how we can upgrade to newer version
-        imagePullPolicy: Always                  
-        ports:            # Since nginx is a web server, we let it listen on port 80 in the container
-        - containerPort: 6001
+      - name: consumer       # this is going to be used for DNS name
+        # Change the IP address to where you are running this
+        image: camrenhall/cloudhgh:kbcon-image   # this is the image in registry accessible
+                                             # from all our workers
+        imagePullPolicy: Always  # This forces the node to pull the image
         command: ["python3"]
-        args: ["consumer.py"]
+        args: ["consumer.py"]  # arguments to run. I am running this for 1000
+                                                                                                       # iterations so that we have time to do an exec
+                                                                                                       # and open a shell to the running pod
+      restartPolicy: Never  # we ask Kubernetes not to restart
 ...
+
+
+
