--- a/Project3/Kubernetes Cluster/container-deployment/Kafka-Consumer/consumer-deployment.yaml
+++ b/Project3/Kubernetes Cluster/container-deployment/Kafka-Consumer/consumer-deployment.yaml
@@ -17,7 +17,7 @@ spec:                     # This is the specification where we can even put the 
         image: camrenhall/cloudhgh:kbcon-image   # this is the image in registry accessible
                                              # from all our workers
         imagePullPolicy: Always  # This forces the node to pull the image
-        command: ["python3"]
+        command: ["python"]
         args: ["consumer.py"]  # arguments to run. I am running this for 1000
                                                                                                        # iterations so that we have time to do an exec
                                                                                                        # and open a shell to the running pod
