--- a/Project3/Kubernetes Cluster/container-deployment/Kafka-Consumer/dockerfile
+++ b/Project3/Kubernetes Cluster/container-deployment/Kafka-Consumer/dockerfile
@@ -15,7 +15,7 @@ FROM ubuntu:latest
 RUN apt-get -y update && apt-get install -y net-tools python3 gcc
 RUN apt-get install -y python3-dev python3-pip
 RUN python3 -m pip install --upgrade pip
-RUN pip install kafka-python
+RUN pip3 install kafka-python
 #
 # Next, copy our matrix inverse code into the container
 COPY *.py /
