--- a/Project3/Kubernetes Cluster/tasks/playbook_install_docker_kube.yml
+++ b/Project3/Kubernetes Cluster/tasks/playbook_install_docker_kube.yml
@@ -1,12 +1,6 @@
-#installing docker and adding user named vagrant to it
-- hosts: MyChameleonVMs
-  remote_user:  cc   # change the user to whatever is the user on the cloud VM
-  collections:   # this is new starting with Ansible 2.9 (akin to importing package)
-    - openstack.cloud
-  become: yes
-  
-  tasks:
+---
   - name: Install packages that allow apt to be used over HTTPS
+    become: yes
     apt:
       name: "{{ packages }}"
       state: present
@@ -20,16 +14,19 @@
       - software-properties-common
 
   - name: Add an apt signing key for Docker
+    become: yes
     apt_key:
       url: https://download.docker.com/linux/ubuntu/gpg
       state: present 
 
   - name: Add apt repository for stable version
+    become: yes
     apt_repository:
       repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable
       state: present
 
-  - name: Install docker and its dependecies
+  - name: Install docker and its dependencies
+    become: yes
     apt: 
       name: "{{ packages }}"
       state: present
@@ -41,24 +38,21 @@
       - containerd.io
      
   - name: Docker mod
+    become: yes
     replace:
       path: /lib/systemd/system/docker.service
       regexp: 'ExecStart=/usr/bin/dockerd -H fd:// --containerd=/run/containerd/containerd.sock'
       replace: 'ExecStart=/usr/bin/dockerd -H fd:// --containerd=/run/containerd/containerd.sock --exec-opt native.cgroupdriver=systemd'    
-    become: yes
-    become_user: root
 
   - name: Restart service docker, in all cases, also issue daemon-reload to pick up config changes
+    become: yes
     ansible.builtin.systemd:
       state: restarted
       daemon_reload: yes
       name: docker
 
-  # - name: Add vagrant user to docker group
-  #   user:
-  #     name: vagrant
-  #     group: docker
   - name: Remove swapfile from /etc/fstab
+    become: yes
     mount:
       name: "{{ item }}"
       fstype: swap
@@ -72,17 +66,20 @@
     when: ansible_swaptotal_mb > 0
     
   - name: Add an apt signing key for Kubernetes
+    become: yes
     apt_key:
       url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
       state: present
 
   - name: Adding apt repository for Kubernetes
+    become: yes
     apt_repository:
       repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
       state: present
       filename: kubernetes.list
 
   - name: Install Kubernetes binaries
+    become: yes
     apt: 
       name: "{{ packages }}"
       state: present
@@ -93,10 +90,11 @@
         - kubeadm 
         - kubectl
 
-  
-
   - name: Restart kubelet
+    become: yes
     service:
       name: kubelet
       daemon_reload: yes
       state: restarted
+
+...
